# clear_repeated_files

./: README.en.md  README.md  datas.sql  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  sql.rs
src/components/: Greet.vue
