[package]
name = "clear_repeated_files"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "dialog-message", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "*", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "*", features = ["full"] }
async-recursion = "*"
sysinfo = "*"
sha1 = "*"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
